# django-ansible-base

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  manage.py  pre-commit.sh  pyproject.toml  setup.py  sonar-project.properties
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  dab-consumers.yml  linting.yml  postgres_ci.yml  release.yml  sanity.yml  sonar-pr.yml
ansible_base/: README.md  __init__.py  _version.py  apps.py  checks.py  settings.py  urls.py
ansible_base/activitystream/: __init__.py  admin.py  apps.py  filtering.py  serializers.py  signals.py  urls.py  views.py
ansible_base/api_documentation/: apps.py  customizations.py  urls.py
ansible_base/authentication/: admin.py  apps.py  backend.py  common.py  constants.py  middleware.py  oauth2.py  routers.py  session.py  social_auth.py  urls.py
ansible_base/authenticator_plugins/: base.py  keycloak.py  ldap.py  local.py  saml.py  utils.py
ansible_base/cache/: apps.py  fallback_cache.py
ansible_base/channels/: middleware.py
ansible_base/features/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
ansible_base/filters/: utils.py
ansible_base/help_text_check/: apps.py  urls.py
ansible_base/jwt_consumer/: apps.py  urls.py  views.py
ansible_base/lib/: checks.py  constants.py  models.py
ansible_base/migrations/: 0001_initial.py  0002_authenticator_order.py  0003_authenticatoruser.py  0004_authenticatoruser_last_login.py  0005_authenticator_changes.py  0006_user_tracking_fields.py  0007_remove_authenticatoruser_last_login.py  0008_authenticatormap_name_and_more.py  0008_authenticatormap_name_authenticatormap_role_and_more.py  0009_alter_authenticatormap_name_and_more.py  0009_authenticator_users.py  0009_oauth2accesstoken_oauth2application_and_more.py  0009_oauth2refreshtoken_oauth2idtoken_oauth2accesstoken_and_more.py  0009_resourcetype_resource_permission.py  0009_serviceid_resourcetype_resource.py  0010_RBAC.py  0010_alter_authenticator_type.py  0010_initial_oauth2.py  0010_oauth2accesstoken_application_and_more.py  0010_postgrestransaction.py  0010_remove_resource_parents.py  0010_serviceid_resourcetype_resource.py  0011_link_to_oauth2_provider.py  _managed_definitions.py
ansible_base/models/: __init__.py  authenticator.py  authenticator_map.py  common.py  oauth2_provider.py  oauth2_provider.py.temp  organization.py  rbac.py  resource.py  service_id.py  social_auth.py  user.py
ansible_base/oauth2_provider/: apps.py  authentication.py  fixtures.py  permissions.py  urls.py  utils.py
ansible_base/rbac/: __init__.py  admin.py  apps.py  caching.py  evaluations.py  managed.py  models.py  permission_registry.py  policies.py  prefetch.py  triggers.py  urls.py  validators.py
ansible_base/resource_registry/: __init__.py  apps.py  fields.py  registry.py  resource_server.py  resource_urls.py  rest_client.py  serializers.py  shared_types.py  urls.py  views.py
ansible_base/rest_filters/: apps.py  urls.py  utils.py
ansible_base/rest_pagination/: __init__.py  apps.py  default_paginator.py  urls.py
ansible_base/serializers/: __init__.py  authenticator.py  authenticator_map.py  common.py  fields.py  oauth2_provider.py  resource.py
ansible_base/settings/: dynamic_settings.py
ansible_base/signals/: handlers.py
ansible_base/tests/: conftest.py  settings_overrides.py  test_checks.py  urls.py
ansible_base/utils/: authentication.py  encryption.py  features.py  filtering.py  filters.py  middleware.py  models.py  oauth2_provider.py  resource_registry.py  rest_filters.py  settings.py  transactions.py  validation.py
ansible_base/views/: __init__.py  authenticator.py  authenticator_map.py  authenticator_plugins.py  oauth2_provider.py  resource.py  trigger_definition.py  ui_auth.py
compose/ingress/: Dockerfile  entrypoint.sh  nginx.conf
compose/nginx/: nginx.conf
docs/: Installation.md  api_documentation.md  apps_or_lib.md  authentication.md  authenticator_plugins.md  channels_authentication.md  default_models.md  encryption.md  filtering.md  filtering_and_sorting.md  logging.md  management_commands.md  organizations.md  rbac.md  serializers.md  testing.md  validation.md  vscode.md
docs/apps/: activitystream.md  api_documentation.md  features.md  help_text_check.md  oauth2_provider.md  rbac.md  resource_registry.md  rest_filters.md  rest_pagination.md  service_backed_sso.md
docs/lib/: channels_authentication.md  default_models.md  encryption.md  fallback_cache.md  organizations.md  redis.md  requests.md  routers.md  serializers.md  sessions.md  validation.md  views.md
requirements/: dynamic_venv.sh  requirements.in  requirements.txt  requirements_activitystream.in  requirements_all.txt  requirements_api_documentation.in  requirements_api_documentation.txt  requirements_authentication.in  requirements_authentication.txt  requirements_channels.txt  requirements_dev.txt  requirements_jwt_consumer.in  requirements_jwt_consumer.txt  requirements_lint.txt  requirements_oauth2_provider.in  requirements_oauth2_provider.txt  requirements_redis_client.in  requirements_redis_client.txt  requirements_resource_registry.in  requirements_swagger.in  requirements_testing.in  requirements_testing.txt  updater.sh
test_app/: README.md  admin.py  apps.py  managers.py  models.py  resource_api.py  router.py  serializers.py  settings.py  settings_pg.py  sqlite3settings.py  urls.py  uwsgi.ini  views.py  wsgi.py
test_app/authentication/: logged_basic_auth.py  service_token_auth.py
test_app/migrations/: 0001_initial.py  0002_remove_organization_users_relatedfieldstestmodel.py  0002_set_up_resources_test_data.py  0002_team_organization.py  0003_alter_team.py  0003_create_system_user.py  0003_immutablelogentry.py  0003_immutablelogentrynotcommon_immutablelogentry.py  0003_multiplefieldsmodel_animal.py  0003_team_admins_team_users.py  0004_animal.py  0004_immutablelogentry.py  0004_multiplefieldsmodel_animal.py  0004_remove_encryptionmodel_created_on_and_more.py  0005_city.py  0006_team_admins_team_users.py  (+13 more)
(+496 files in other folders)
