[project.urls]
Repository = "https://github.com/ansible/django-ansible-base"

[project]
name = "django-ansible-base"
authors = [
    {name = "Red Hat, Inc.", email = "info@ansible.com"},
    {name = "John Westcott IV", email = "john.westcott.iv@redhat.com"},
]
description = "A Django app used by ansible services"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ansible", "django"]
license = {file = "LICENSE.md"}
classifiers = [
    "Framework :: Django",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.in"]}

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 160
fast = true
skip-string-normalization = true
force-exclude = '''
.*/migrations/
'''

[tool.isort]
profile = "black"
line_length = 160
extend_skip = [ "ansible_base/migrations" ]


[tool.flake8]
max-line-length = 160
extend-ignore = [ "E203" ]
exclude = [ 'ansible_base/migrations/*', '.tox', 'build']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ansible_base.tests.settings_overrides"
addopts = "--strict-markers --reuse-db --create-db --migrations -s -vvv"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    no_package = true
    env_list =
        check
        py39
        py310
        py311
    labels =
        test = py39, py310, py311, check
        lint = flake8, black, isort

    [testenv]
    deps =
        -r{toxinidir}/requirements/requirements.txt
        -r{toxinidir}/requirements/requirements_dev.txt
        pyfakefs
    commands = pytest -n auto --cov=. --cov-report=xml:coverage.xml --cov-report=html --cov-report=json --cov-branch {env:GATEWAY_TEST_DIRS:ansible_base/tests} {posargs}

    [testenv:check]
    deps =
         -r{toxinidir}/requirements/requirements.txt
         psycopg[binary]
    commands = python3 manage.py check

    [testenv:flake8]
    deps =
        flake8
        Flake8-pyproject
    commands = flake8 {posargs:.}

    [testenv:black]
    deps =
        black
    commands = black {posargs:.}

    [testenv:isort]
    deps =
        isort
    commands = isort {posargs:.}
"""

[tool.coverage.run]
omit = ["ansible_base/tests/*"]
relative_files = true
