[project.urls]
Repository = "https://github.com/ansible/django-ansible-base"

[project]
name = "django-ansible-base"
authors = [
    {name = "Red Hat, Inc.", email = "info@ansible.com"},
    {name = "John Westcott IV", email = "john.westcott.iv@redhat.com"},
]
description = "A Django app used by ansible services"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ansible", "django"]
license = {file = "LICENSE.md"}
classifiers = [
    "Framework :: Django",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["ansible_base*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.in"]}
optional-dependencies.all = { file = [
    "requirements/requirements_authentication.in",
    "requirements/requirements_api_documentation.in",
    "requirements/requirements_rest_filters.in",
    "requirements/requirements_channels.in",
    "requirements/requirements_jwt_consumer.in",
    "requirements/requirements_testing.in",
] }
optional-dependencies.authentication = { file = [ "requirements/requirements_authentication.in" ] }
optional-dependencies.api_documentation = { file = [ "requirements/requirements_api_documentation.in" ] }
optional-dependencies.rest_filters = { file = [ "requirements/requirements_rest_filters.in" ] }
optional-dependencies.channel_auth = { file = [ "requirements/requirements_channels.in" ] }
optional-dependencies.jwt_consumer = { file = [ "requirements/requirements_jwt_consumer.in" ] }
optional-dependencies.testing = { file = [ "requirements/requirements_testing.in" ] }

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_scheme = "calver-by-date"
version_file = 'ansible_base/_version.py'
local_scheme = 'no-local-version'

[tool.black]
line-length = 160
fast = true
skip-string-normalization = true
force-exclude = '''
.*/migrations/
'''

[tool.isort]
profile = "black"
line_length = 160
extend_skip = [ "ansible_base/authentication/migrations", "test_app/migrations" ]


[tool.flake8]
max-line-length = 160
extend-ignore = [ "E203" ]
exclude = [ 'ansible_base/authentication/migrations/*', 'test_app/migrations/*', '.tox', 'build']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_app.settings"
addopts = "--strict-markers --reuse-db --create-db --migrations -s -vvv"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    no_package = true
    env_list =
        check
        py39
        py310
        py311
    labels =
        test = py39, py310, py311, check
        lint = flake8, black, isort

    [testenv]
    deps =
        -r{toxinidir}/requirements/requirements_all.txt
        -r{toxinidir}/requirements/requirements_dev.txt
    commands = pytest -n auto --cov=. --cov-report=xml:coverage.xml --cov-report=html --cov-report=json --cov-branch {env:ANSIBLE_BASE_TEST_DIRS:test_app/tests} {posargs}

    [testenv:check]
    deps =
         -r{toxinidir}/requirements/requirements_all.txt
         psycopg[binary]
    commands = python3 manage.py check

    [testenv:flake8]
    deps =
        flake8
        Flake8-pyproject
    commands = flake8 {posargs:.}

    [testenv:black]
    deps =
        black
    commands = black {posargs:.}

    [testenv:isort]
    deps =
        isort
    commands = isort {posargs:.}
"""

[tool.coverage.run]
omit = ["test_app/*", "manage.py"]
relative_files = true
